--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,5 @@
-
 <br><br>
-<%= form_with scope: :category, model: @category, local: true do |f| %>
+<%= form_with scope: :task, model: [@category, @task], local: true do |f| %>
 
   <% if @category.errors.any? %>
     <ul>
@@ -13,8 +12,8 @@
   <% end %>
 
   <div>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.label :task_title %>
+    <%= f.text_field :task_title %>
   </div>
 
   <div>
