--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,24 +1,31 @@
+<%= render "shared/nav" %>
 
-<br><br>
-<%= form_with scope: :category, model: @category, local: true do |f| %>
+<div class="flex justify-evenly">
+  <%= image_tag("checklist-animate.svg",  class:"w-1/3") %>
 
-  <% if @category.errors.any? %>
-    <ul>
-      <% @category.errors.full_messages.each do |message| %>
-        <li>
-          <%= message %>
-        </li>
-        <% end %>
-    </ul>
-  <% end %>
+
 
   <div>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
+    <%= form_with scope: :category, model: @category, local: true do |f| %>
 
-  <div>
-    <%= f.submit %>
-  </div>
-<% end %>
+      <% if @category.errors.any? %>
+        <ul>
+          <% @category.errors.full_messages.each do |message| %>
+            <li>
+              <%= message %>
+            </li>
+            <% end %>
+        </ul>
+      <% end %>
 
+      <div class="flex flex-col space-y-5 mt-10 text-black">
+        <%= f.text_field :title, placeholder: "Agenda Title", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-sm"%>
+
+        <%= f.text_area :description, size: "40x10", placeholder: "Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-sm"%>
+
+        <%= f.submit %>
+      </div>
+    <% end %>
+
+  </div>
+</div>
