--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,6 @@
 <%= render "shared/nav" %>
 <br>
 
-
 <% if @categories.count == 0 %>
 
   <div class="flex justify-center">
@@ -10,24 +9,27 @@
 
   <div class="flex justify-center text-3xl space-x-5">
     <h1>No Agendas yet. </h1>
-    <%= link_to 'Create one now!', new_category_path, class: "text-pink-300 hover:text-pink-600"%>
+    <%= link_to 'Create one now!', new_category_path, class: "text-pink-300 transform hover:text-pink-600 hover:scale-110 transition ease-in"%>
   </div>
 
 <% else %>
-  <div class="flex">
-    <% @categories.each do |category| %>
-      <%= link_to category_tasks_path(category) do %>
-        <div class="w-1/4 mx-auto flex-col space-y-3 p-6 bg-gray-200 rounded-lg shadow-xl text-black">
 
-        <%= link_to 'Update', edit_category_path(category) %>
-        <%= link_to 'Delete', category_path(category), method: :delete, data: { confirm: "Are you sure you want to delete this article?" } %>
+  <div class="flex justify-center">
+    <div class="grid grid-flow-row grid-cols-3 grid-rows-3 gap-20 m-6 max-w-6xl">
+      <% @categories.each do |category| %>
+        <div class="w-80 h-36 mx-auto flex-col space-y-2 p-6 bg-gray-200 rounded-lg text-black">
 
-          <div class="text-4xl font-bold"><%= category.title %></div>
-          <div class="text-xl font-bold"><%= category.description %></div>
+          <div class="text-xl font-bold border-b-2 border-black"><%= category.title %></div>
+          <div class="text-sm"><%= truncate(strip_tags(category.description.to_s), length: 50) %></div>
+          <div class="flex justify-end space-x-3">
+            <%= link_to 'Edit', edit_category_path(category), class:"hover:text-pink-600" %>
+            <%= link_to 'Show', category_tasks_path(category), class:"hover:text-pink-600" %>
+            <%= link_to 'Delete', category_path(category), method: :delete, data: { confirm: "Are you sure you want to delete this agenda?" }, class:"hover:text-pink-600" %>
+          </div>
+
         </div>
       <% end %>
-    <% end %>
+    </div>
   </div>
 
 <% end %>
-
