--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -4,28 +4,25 @@
   <%= image_tag("checklist-animate.svg",  class:"w-1/3") %>
 
 
-
   <div>
     <%= form_with scope: :category, model: @category, local: true do |f| %>
 
-      <% if @category.errors.any? %>
-        <ul>
-          <% @category.errors.full_messages.each do |message| %>
-            <li>
-              <%= message %>
-            </li>
-            <% end %>
-        </ul>
-      <% end %>
-
-      <div class="flex flex-col space-y-5 mt-10 text-black">
-        <%= f.text_field :title, placeholder: "Agenda Title", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-sm"%>
-
-        <%= f.text_area :description, size: "40x10", placeholder: "Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-sm"%>
-
-        <%= f.submit %>
+      <div class="flex flex-col space-y-5 mt-20 text-black">
+        <%= f.text_field :title, placeholder: " Agenda Title", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-lg w-full"%>
+        <%= f.text_area :description, size: "40x10", placeholder: " Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-lg"%>
+        <%= f.submit 'Create Agenda', class:"bg-pink-300 rounded-lg" %>
       </div>
     <% end %>
 
   </div>
 </div>
+
+<% if @category.errors.any? %>
+  <ul>
+    <% @category.errors.full_messages.each do |message| %>
+      <li>
+        <%= message %>
+      </li>
+      <% end %>
+  </ul>
+<% end %>
