--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,6 @@
+<%= render "shared/nav" %>
+
+
 <br><br>
 <%= form_with scope: :task, model: [@category, @task], local: true do |f| %>
 
@@ -12,8 +15,13 @@
   <% end %>
 
   <div>
-    <%= f.label :task_title %>
-    <%= f.text_field :task_title %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  </div>
+
+  <div>
+    <%= f.label :description %>
+    <%= f.text_field :description %>
   </div>
 
   <div>
