--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,12 +4,12 @@
 <% if @categories.count == 0 %>
 
   <div class="flex justify-center">
-    <%= image_tag("to-do-list-animate.svg", class:"w-1/3") %>
+    <%= image_tag("checklist-animate.svg", class:"w-1/3") %>
   </div>
 
   <div class="flex justify-center text-3xl space-x-5">
     <h1>No Agendas yet. </h1>
-    <%= link_to 'Create one now!', new_category_path, class: "text-pink-300 transform hover:text-pink-600 hover:scale-110 transition ease-in"%>
+    <%= link_to 'Create one now!', new_category_path, class: "text-yellow-300 transform hover:text-yellow-400 hover:scale-110 transition ease-in"%>
   </div>
 
 <% else %>
