--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -22,9 +22,9 @@
           <div class="text-xl font-bold border-b-2 border-black"><%= category.title %></div>
           <div class="text-sm"><%= truncate(strip_tags(category.description.to_s), length: 50) %></div>
           <div class="flex justify-end space-x-3">
-            <%= link_to 'Edit', edit_category_path(category), class:"hover:text-pink-600" %>
-            <%= link_to 'Show', category_tasks_path(category), class:"hover:text-pink-600" %>
-            <%= link_to 'Delete', category_path(category), method: :delete, data: { confirm: "Are you sure you want to delete this agenda?" }, class:"hover:text-pink-600" %>
+            <%= link_to 'Edit', edit_category_path(category), class:"hover:text-yellow-600" %>
+            <%= link_to 'Show', category_path(category), class:"hover:text-yellow-600" %>
+            <%= link_to 'Delete', category_path(category), method: :delete, data: { confirm: "Are you sure you want to delete this agenda?" }, class:"hover:text-yellow-600" %>
           </div>
 
         </div>
