--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -19,8 +19,8 @@
       <% @categories.each do |category| %>
         <div class="w-80 h-36 mx-auto flex-col space-y-2 p-6 bg-gray-200 rounded-lg text-black">
 
-          <div class="text-xl font-bold border-b-2 border-black"><%= category.title %></div>
-          <div class="text-sm"><%= truncate(strip_tags(category.description.to_s), length: 50) %></div>
+          <div class="flex justify-center text-2xl font-bold border-b-2 border-black"><%= category.title %></div>
+          <div class="text-md"><%= truncate(strip_tags(category.description.to_s), length: 50) %></div>
           <div class="flex justify-end space-x-3">
             <%= link_to 'Edit', edit_category_path(category), class:"hover:text-yellow-600" %>
             <%= link_to 'Show', category_path(category), class:"hover:text-yellow-600" %>
