--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,19 +1,60 @@
 <%= render "shared/nav" %>
 
+<div class="flex justify-center border max-w-4xl mx-auto mt-12 bg-gray-800 rounded mb-5">
+  <div class="flex justify-between items-center w-9/12">
+    <div class="flex flex-col items-center">
 
-<div class="flex flex-col items-center">
-  <div class="text-5xl">
-    <%= @category.title %>
+      <span class="text-4xl font-semibold text-gray-200">
+        <%= @category.title %>
+      </span>
+
+      <em>
+        <%= @category.description %>
+      </em>
+    </div>
+
+    <div class="flex justify-between items-center w-1/4">
+      <button><%= link_to "Add task", new_category_task_path(@category), class:"bg-yellow-300 hover:bg-yellow-500 text-gray-900 font-medium py-2 px-2 rounded" %></button>
+      <button><%= link_to 'Edit', edit_category_path(@category), class:"bg-yellow-300 hover:bg-yellow-500 text-gray-900 font-medium py-2 px-2 rounded" %></button>
+    </div>
+    
   </div>
-
-  <div class="flex text-3xl">
-    <% @category.tasks.each do |task| %>
-      <%= task.title %>
-      <%= task.description %>
-    <% end %>
-  </div>
-
-
-
-  <%= link_to "Add task", new_category_task_path(@category) %>
 </div>
+
+<% if @category.tasks.count == 0 %>
+
+  <div class="flex justify-center max-w-3xl mx-auto mt-2 rounded">
+    <h1>NO TASK YET UNDER THIS CATEGORY</h1>
+  </div>
+
+<% else %>
+
+  <% @category.tasks.each do |task| %>
+    <div class="flex justify-center border max-w-3xl mx-auto rounded mb-2">
+      <div class="flex justify-between items-center w-9/12">
+
+        <div class="flex flex-col items-center">
+          
+          <span class="text-2xl font-medium text-gray-200">
+            <%= task.title %>
+          </span>
+          
+          <em>
+            <%= task.description %>
+          </em>
+
+        </div>
+
+        <div class="flex justify-between items-center w-1/6">
+
+          <%= link_to image_tag("png/edit.png", class:"w-7"), edit_category_task_path(@category, task) %>
+
+          <%= link_to image_tag("png/delete.png", class:"w-7"), category_task_path(@category, task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
+
+        </div>
+
+      </div>
+    </div>
+  <% end %>
+
+<% end %>
