--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class="">
   <div class="flex justify-between max-w-6xl mx-auto py-2 px-2 text-gray-200 items-center border-b-2 border-yellow-300">
-    <div class="font-extrabold text-4xl"><%= link_to 'Agenda', home_path %></div>
+    <div class="font-extrabold text-4xl hover:text-gray-400"><%= link_to 'Agenda', home_path %></div>
 
     <div class="flex justify-around w-2/6 text-xl font-bold">
 
