--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,16 +1,20 @@
 <%= render "shared/nav" %>
 
-<%= form_with scope: :category, url: @category, method: :put, local: true do |f| %>
 
-<div class="flex justify-evenly">
+<div class="flex justify-evenly text-black">
+  <div>
+    <%= form_with scope: :category, url: @category, method: :put, local: true do |f| %>
 
-  <div class="flex flex-col space-y-5 mt-16 text-black">
-    <%= f.text_field :title, placeholder: " Agenda Title", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md w-full py-2"%>
-    <%= f.text_area :description, size: "60x10", placeholder: " Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
-    <button class="flex justify-end"><%= f.submit 'Edit Agenda', class:"bg-yellow-300 px-2 py-1 rounded-md hover:bg-yellow-400 cursor-pointer" %></button>
+      <div class="flex flex-col space-y-5 mt-16">
+        <%= f.text_field :title, placeholder: " Agenda Title", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md w-full py-2"%>
+        <%= f.text_area :description, size: "50x10", placeholder: " Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
+      </div>
+
+      <%= f.submit 'Edit Agenda', class:"flex flex-end bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer mt-5" %>
+
+    <% end %>
   </div>
-
+  
   <%= image_tag("checklist-animate.svg",  class:"w-1/3") %>
-</div>
 
-<% end %>
+</div>
