--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -3,15 +3,15 @@
 <div class="flex justify-evenly">
   <%= image_tag("checklist-animate.svg",  class:"w-1/3") %>
 
-
   <div>
     <%= form_with scope: :category, model: @category, local: true do |f| %>
 
       <div class="flex flex-col space-y-5 mt-16 text-black">
-        <%= f.text_field :title, placeholder: " Agenda Title", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md w-full py-2"%>
-        <%= f.text_area :description, size: "60x10", placeholder: " Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
-        <button class="flex justify-end"><%= f.submit 'Create Agenda', class:"bg-yellow-300 px-2 py-1 rounded-md hover:bg-yellow-400 cursor-pointer" %></button>
+        <%= f.text_field :title, placeholder: " Agenda Title", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md py-2"%>
+        <%= f.text_area :description, size: "50x10", placeholder: " Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
       </div>
+
+      <%= f.submit 'Create Agenda', class:"flex justify-end bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer text-black mt-5" %>
     <% end %>
 
   </div>
