--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -34,7 +34,6 @@
       <div class="flex justify-between items-center w-9/12">
 
         <div class="flex flex-col items-center">
-          
           <span class="text-2xl font-medium text-gray-200">
             <%= task.title %>
           </span>
@@ -43,14 +42,14 @@
             <%= task.description %>
           </em>
 
+          <span class="text-2xl font-medium text-gray-200">
+            <%= task.deadline %>
+          </span>
         </div>
 
         <div class="flex justify-between items-center w-1/6">
-
           <%= link_to image_tag("png/edit.png", class:"w-7"), edit_category_task_path(@category, task) %>
-
           <%= link_to image_tag("png/delete.png", class:"w-7"), category_task_path(@category, task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
-
         </div>
 
       </div>
