--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,30 +1,27 @@
 <%= render "shared/nav" %>
 
-
-<br><br>
-<%= form_with scope: :task, model: [@category, @task], local: true do |f| %>
-
-  <% if @category.errors.any? %>
-    <ul>
-      <% @category.errors.full_messages.each do |message| %>
-        <li>
-          <%= message %>
-        </li>
-        <% end %>
-    </ul>
-  <% end %>
+<div class="flex justify-evenly text-black">
+  <%= image_tag("checklist-animate.svg",  class:"w-1/3") %>
 
   <div>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= form_with scope: :task, model: [@category, @task], local: true do |f| %>
+
+      <div class="flex flex-col space-y-5 mt-16">
+        <%= f.text_field :title, placeholder: "Task Title", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md w-full py-2"%>
+        <%= f.text_area :description, size: "50x10", placeholder: " Task Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
+        <%= f.date_field :deadline, class: "rounded"%>
+      </div>
+      <%= f.submit 'Create Task', class:"bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer mt-5" %>
+    
+    <% end %>
   </div>
 
-  <div>
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </div>
-
-  <div>
-    <%= f.submit %>
-  </div>
+<% if @category.errors.any? %>
+  <ul>
+    <% @category.errors.full_messages.each do |message| %>
+      <li>
+        <%= message %>
+      </li>
+      <% end %>
+  </ul>
 <% end %>
