change the color

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -9,7 +9,7 @@
 
   <div class="flex justify-center text-3xl space-x-5">
     <h1>No Agendas yet. </h1>
-    <%= link_to 'Create one now!', new_category_path, class: "text-yellow-300 transform hover:text-yellow-400 hover:scale-110 transition ease-in"%>
+    <%= link_to 'Create one now!', new_category_path, class: "bg-yellow-300 rounded-lg px-2 text-gray-900 transform hover:text-black hover:scale-110 transition ease-in"%>
   </div>
 
 <% else %>
