--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="bg-gray-900 font-montserrat text-gray-200 tracking-tighter">
+  <body class="h-screen bg-gradient-to-br from-blue-300 via-indigo-300 to-yellow-300 font-montserrat text-gray-900 tracking-tighter">
     <%= yield %>
   </body>
 </html>
