--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/nav" %>
 
 <div class="flex justify-evenly">
-  <%= image_tag("checklist-animate.svg",  class:"w-1/3") %>
+  <%= image_tag("checklist-animate (1).svg",  class:"w-1/3") %>
 
   <div>
     <%= form_with scope: :category, model: @category, local: true do |f| %>
