--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/nav" %>
 
 <div class="flex flex-col items-center max-w-4xl mx-auto mt-10 bg-transparent border border-black rounded-lg overflow-hidden transparent">
-  <div class="flex justify-around items-center bg-gradient-to-l from-blue-400 to-white w-full mb-6">
+  <div class="flex justify-around items-center bg-gradient-to-l from-blue-400 to-gray-200 w-full mb-6">
     <div class="flex flex-col items-center">
 
       <span class="text-3xl font-semibold text-gray-800">
