--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class="">
   <div class="flex justify-between max-w-6xl mx-auto py-2 px-2 items-center border-b-2 border-black">
-    <div class="text-transparent bg-clip-text bg-gradient-to-b from-yellow-300 to-black font-extrabold text-4xl hover:text-gray-600"><%= link_to 'Agenda', home_path %></div>
+    <div class="text-gray-800 font-extrabold text-4xl hover:text-transparent bg-clip-text bg-gradient-to-br from-yellow-500 to-black"><%= link_to 'Agenda', home_path %></div>
 
     <div class="flex justify-around w-2/6 text-xl font-bold">
 
