--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -7,8 +7,8 @@
     <%= form_with scope: :category, model: @category, local: true do |f| %>
 
       <div class="flex flex-col space-y-5 mt-16 text-black">
-        <%= f.text_field :title, placeholder: " Agenda Title", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md py-2"%>
-        <%= f.text_area :description, size: "50x10", placeholder: " Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
+        <%= f.text_field :title, placeholder: " Agenda Title", class: "w-full placeholder-gray-700 focus:placeholder-gray-400 rounded-md py-2"%>
+        <%= f.text_area :description, size: "40x10", placeholder: " Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
       </div>
 
       <%= f.submit 'Create Agenda', class:"flex justify-end bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer text-black mt-5" %>
