--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,59 +1,53 @@
 <%= render "shared/nav" %>
 
-<div class="flex flex-col items-center max-w-4xl mx-auto mt-10 bg-transparent border border-black rounded-lg overflow-hidden transparent">
-  <div class="flex justify-around items-center bg-gradient-to-l from-blue-400 to-gray-200 w-full mb-6">
-    <div class="flex flex-col items-center">
+<div class="max-w-3xl flex flex-col justify-center text-center mx-auto mt-8 rounded bg-gradient-to-r from-blue-400 to-transparent shadow-md relative">  
+  <div class="flex flex-col items-center">
 
-      <span class="text-3xl font-semibold text-gray-800">
-        <%= @category.title %>
-      </span>
-
-      <em class="text-gray-800">
-        <%= @category.description %>
-      </em>
+    <div class="absolute top-4 right-6 bg-yellow-300 hover:bg-yellow-500 text-gray-900 font-medium py-2 px-3 rounded">
+      <div class="flex justify-between items-center">
+        <%= image_tag("png/plus.png", class:"w-3 h-3")%>
+        <%= link_to "Add task", new_category_task_path(@category), class:"pl-2" %>
+      </div>
     </div>
 
-    <div class="flex justify-around items-center w-1/4">
-      <button><%= link_to "Add task", new_category_task_path(@category), class:"bg-yellow-300 hover:bg-yellow-500 text-gray-900 font-medium py-2 px-2 rounded" %></button>
-      <button><%= link_to 'Edit', edit_category_path(@category), class:"bg-yellow-300 hover:bg-yellow-500 text-gray-900 font-medium py-2 px-2 rounded" %></button>
-    </div>
-    
+    <h1 class="text-5xl text-gray-100 font-bold mt-16"><%= @category.title %></h1>
+    <em class="text-2xl font-light mb-10"><%= @category.description %></em>
+
   </div>
-
 
   <% if @category.tasks.count == 0 %>
 
-    <div class="flex justify-center max-w-2xl mx-auto mt-2 rounded">
+    <div class="flex justify-center mt-1 rounded">
       <h1>NO TASK YET UNDER THIS CATEGORY</h1>
     </div>
 
   <% else %>
 
-    <% @category.tasks.each do |task| %>
-      <div class="flex justify-center border w-11/12 mx-auto rounded mb-1">
-        <div class="flex justify-between w-full">
-
-          <div class="flex flex-col items-center">
-            <span class="text-2xl font-medium text-gray-800">
-              <%= task.title %>
-            </span>
-    
-            <em>
-              <%= task.description %>
-            </em>
-
-              <%= task.deadline %>
-          </div>
-
-          <div class="flex justify-around items-center w-1/4">
-            <%= link_to image_tag("png/edit.png", class:"w-7"), edit_category_task_path(@category, task) %>
-            <%= link_to image_tag("png/delete.png", class:"w-7"), category_task_path(@category, task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
-          </div>
-
+    <div class="grid grid-cols-6 w-full mb-1">
+      <% @category.tasks.each do |task| %>
+        <div class="flex justify-around items-center col-span-1 border rounded-l">
+          <h1>CBox</h1>
         </div>
-      </div>
-    <% end %>
-  <% end %>
-</div>
 
+        <div class="col-span-4 border py-2">
+          <span class="text-2xl font-medium text-gray-800">
+            <%= task.title %>
+          </span>
+
+          <em class="flex justify-center text-center">
+            <%= truncate(strip_tags(task.description.to_s), length: 50) %>
+          </em>
+
+          <%= task.deadline %>
+        </div>
+
+        <div class="flex justify-around items-center col-span-1 border rounded-r">
+          <%= link_to image_tag("png/edit.png", class:"w-7"), edit_category_task_path(@category, task) %>
+          <%= link_to image_tag("png/delete.png", class:"w-7"), category_task_path(@category, task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+
+</div>
 
