--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -5,8 +5,8 @@
     <%= form_with scope: :task, url: [@category, @task], method: :put, local: true do |f| %>
 
       <div class="flex flex-col space-y-5 mt-16">
-        <%= f.text_field :title, placeholder: " Agenda Title", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md w-full py-2"%>
-        <%= f.text_area :description, size: "50x10", placeholder: " Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
+        <%= f.text_field :title, placeholder: " Agenda Title", class: "w-full placeholder-gray-700 focus:placeholder-gray-400 rounded-md w-full py-2"%>
+        <%= f.text_area :description, size: "40x10", placeholder: " Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
       </div>
 
       <%= f.submit 'Edit Agenda', class:"flex flex-end bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer mt-5" %>
