--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -7,8 +7,8 @@
     <%= form_with scope: :task, model: [@category, @task], local: true do |f| %>
 
       <div class="flex flex-col space-y-5 mt-16">
-        <%= f.text_field :title, placeholder: "Task Title", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md w-full py-2"%>
-        <%= f.text_area :description, size: "50x10", placeholder: " Task Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
+        <%= f.text_field :title, placeholder: "Task Title", class: "w-full placeholder-gray-700 focus:placeholder-gray-400 rounded-md w-full py-2"%>
+        <%= f.text_area :description, size: "40x10", placeholder: " Task Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
         <%= f.date_field :deadline, class: "rounded"%>
       </div>
       <%= f.submit 'Create Task', class:"bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer mt-5" %>
