--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,21 +1,30 @@
 <%= render "shared/nav" %>
 
 <div class="flex justify-evenly">
-  <%= image_tag("checklist-animate (1).svg",  class:"w-1/3") %>
 
-  <div>
-    <%= form_with scope: :category, model: @category, local: true do |f| %>
+  <%= image_tag("checklist-animate (1).svg", class:"w-1/3") %>
 
-      <div class="flex flex-col space-y-5 mt-16 text-black">
-        <%= f.text_field :title, placeholder: " Agenda Title", class: "w-full placeholder-gray-700 focus:placeholder-gray-400 rounded-md py-2"%>
-        <%= f.text_area :description, size: "40x10", placeholder: " Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
+    <div class="pr-10">
+      <div class="max-w-3xl text-center mt-8 p-5 rounded bg-gradient-to-r from-blue-200 to-transparent shadow-md">  
+        <%= form_with scope: :category, model: @category, local: true do |f| %>
+
+          <div class="font-bold text-gray-800 text-4xl">
+            New Agenda
+          </div>
+          
+          <div class="flex flex-col space-y-5 mt-5 text-black">
+            <%= f.text_field :title, placeholder: " Agenda Title", class: "w-full placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md py-2 outline-none", style:"background: rgba(250,250,250,.4)" %>
+            <%= f.text_area :description, size: "40x10", placeholder: " Agenda Description", class: "placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none", style:"background: rgba(250,250,250,.4)" %>
+          </div>
+
+          <%= f.submit 'Create Agenda', class:"flex justify-end bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer text-black mt-5" %>
+        
+        <% end %>
       </div>
+    </div>
 
-      <%= f.submit 'Create Agenda', class:"flex justify-end bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer text-black mt-5" %>
-    <% end %>
-
-  </div>
 </div>
+
 
 <% if @category.errors.any? %>
   <ul>
