--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -11,37 +11,40 @@
     </div>
 
     <h1 class="text-5xl text-gray-100 font-bold mt-16"><%= @category.title %></h1>
-    <em class="text-2xl font-light mb-10"><%= @category.description %></em>
+    <em class="text-2xl font-light mb-10"> <%= truncate(strip_tags(@category.description.to_s), length: 60) %>
+</em>
 
   </div>
 
   <% if @category.tasks.count == 0 %>
 
     <div class="flex justify-center mt-1 rounded">
-      <h1>NO TASK YET UNDER THIS CATEGORY</h1>
+      <h1>NO TASK YET UNDER THIS AGENDA!</h1>
     </div>
 
   <% else %>
 
-    <div class="grid grid-cols-6 w-full mb-1">
+    <div class="grid grid-cols-8 w-full mb-1">
       <% @category.tasks.each do |task| %>
-        <div class="flex justify-around items-center col-span-1 border rounded-l">
+        <div class="flex justify-around items-center col-span-1 border border-l-0">
           <h1>CBox</h1>
         </div>
 
-        <div class="col-span-4 border py-2">
-          <span class="text-2xl font-medium text-gray-800">
-            <%= task.title %>
-          </span>
+        <div class="flex justify-around items-center col-span-6 border">
+          <div class="flex flex-col">
+            <span class="text-2xl font-bold text-gray-200">
+              <%= task.title %>
+            </span>
 
-          <em class="flex justify-center text-center">
-            <%= truncate(strip_tags(task.description.to_s), length: 50) %>
-          </em>
+            <em class="flex justify-around text-center">
+              <%= truncate(strip_tags(task.description.to_s), length: 50) %>
+            </em>
+          </div>
 
           <%= task.deadline %>
         </div>
 
-        <div class="flex justify-around items-center col-span-1 border rounded-r">
+        <div class="flex justify-around items-center col-span-1 border border-r-0">
           <%= link_to image_tag("png/edit.png", class:"w-7"), edit_category_task_path(@category, task) %>
           <%= link_to image_tag("png/delete.png", class:"w-7"), category_task_path(@category, task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
         </div>
