--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,7 +4,7 @@
   <div class="flex flex-col items-center">
 
     <%= link_to new_category_task_path(@category) do %>
-      <div class="absolute top-4 right-6 bg-yellow-300 hover:bg-yellow-400 font-medium py-2 px-3 rounded">
+      <div class="absolute top-4 right-6 hover:bg-pink-300 font-medium py-2 px-3 rounded">
 
         <div class="flex justify-between items-center">
           <%= image_tag("png/plus.png", class:"w-3 h-3")%>
