--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="h-screen bg-gradient-to-tr from-blue-300 via-indigo-300 to-yellow-300 font-montserrat text-gray-900 tracking-tighter">
+  <body class="h-screen bg-gradient-to-tr from-blue-300 via-indigo-200 to-pink-200 font-montserrat text-gray-700 tracking-tighter">
     <%= yield %>
   </body>
 </html>
