--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -15,7 +15,7 @@
           <%= f.text_area :description, size: "40x10", placeholder: " Agenda Description", class: "placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none", style:"background: rgba(250,250,250,.4)" %>
         </div>
 
-        <%= f.submit 'Edit Agenda', class:"flex justify-end bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer text-black mt-5" %>
+        <%= f.submit 'Edit Agenda', class:"flex justify-end bg-pink-200 px-3 py-2 rounded-md hover:bg-pink-300 cursor-pointer text-black mt-4" %>
       
       <% end %>
     </div>
