--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,9 +7,9 @@
     <%= image_tag("checklist-animate.svg", class:"w-1/3") %>
   </div>
 
-  <div class="flex justify-center text-3xl space-x-5">
-    <h1>No Agendas yet. </h1>
-    <%= link_to 'Create one now!', new_category_path, class: "bg-yellow-300 rounded-lg px-2 text-gray-900 transform hover:text-black hover:scale-110 transition ease-in"%>
+  <div class="flex justify-center items-center text-xl space-x-3">
+    <h1>No Agendas yet.</h1>
+    <%= link_to 'Create one now!', new_category_path, class: "bg-blue-100 px-5 py-2 rounded-lg transform hover:text-black hover:scale-110 transition ease-in"%>
   </div>
 
 <% else %>
@@ -17,14 +17,16 @@
   <div class="flex justify-center">
     <div class="grid grid-flow-row grid-cols-3 grid-rows-3 gap-20 m-6 max-w-6xl">
       <% @categories.each do |category| %>
-        <div class="w-80 h-36 mx-auto flex-col space-y-2 p-6 bg-gray-200 rounded-lg text-black">
+        <div class="w-80 h-44 m-auto flex-col space-y-3 p-6 rounded-lg bg-gradient-to-br from-white to-transparent eli-form-box-shadow">
 
           <div class="flex justify-center text-2xl font-bold border-b-2 border-black"><%= category.title %></div>
           <div class="text-md"><%= truncate(strip_tags(category.description.to_s), length: 35) %></div>
-          <div class="flex justify-end space-x-3">
-            <%= link_to 'Edit', edit_category_path(category), class:"hover:text-yellow-600" %>
-            <%= link_to 'Show', category_path(category), class:"hover:text-yellow-600" %>
-            <%= link_to 'Delete', category_path(category), method: :delete, data: { confirm: "Are you sure you want to delete this agenda?" }, class:"hover:text-yellow-600" %>
+          <div>
+            <div class="flex justify-end space-x-5 mt-10">
+              <%= link_to image_tag("png/open-folder-with-document.png"), category_path(category), class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
+              <%= link_to image_tag("png/edit (1).png"), edit_category_path(category), class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
+              <%= link_to image_tag("png/delete (1).png"), category_path(category), method: :delete, data: { confirm: "Are you sure you want to delete this agenda?" }, class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
+            </div>
           </div>
 
         </div>
