--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -18,7 +18,7 @@
             <%= f.date_field :deadline, class: "rounded", style:"background: rgba(250,250,250,.4)" %>
           </div>
 
-          <%= f.submit 'Create Task', class:"flex justify-end bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer text-black mt-5" %>
+          <%= f.submit 'Create Task', class:"flex justify-end bg-pink-200 px-3 py-2 rounded-md hover:bg-pink-300 cursor-pointer text-black mt-4" %>
         
         <% end %>
       </div>
