--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,3 @@
-<%= render "shared/nav" %>
-
 <br>
 
 <% if @categories.count == 0 %>
@@ -18,10 +16,10 @@
   <div class="flex justify-center">
     <div class="grid grid-flow-row grid-cols-3 grid-rows-3 gap-20 max-w-6xl">
       <% @categories.each do |category| %>
-        <div class="w-80 h-44 m-auto flex-col space-y-3 p-6 rounded-lg bg-gradient-to-br from-white to-transparent eli-form-box-shadow">
+        <div class="w-80 h-44 m-auto flex-col space-y-3 p-6 rounded-lg bg-gradient-to-bl from-white via-blue-50 to-blue-50 eli-form-box-shadow">
 
           <div class="flex justify-center text-2xl font-bold border-b-2 border-black"><%= category.title %></div>
-          <div class="text-md"><%= truncate(strip_tags(category.description.to_s), length: 35) %></div>
+          <div class="text-md"><%= category.description.to_s.truncate(30) %></div>
           <div>
             <div class="flex justify-end space-x-5 mt-10">
               <%= link_to image_tag("png/open-folder-with-document.png"), category_path(category), class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
