--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,4 @@
-<%= render "shared/nav" %>
-
-<div class="max-w-3xl flex flex-col justify-center text-center mx-auto mt-8 rounded bg-gradient-to-r from-blue-400 to-transparent relative eli-form-box-shadow">
+<div class="max-w-3xl flex flex-col justify-center text-center mx-auto mt-8 rounded-md relative bg-blue-100 eli-form-box-shadow">
   <div class="flex flex-col items-center">
 
     <%= link_to new_category_task_path(@category) do %>
@@ -14,7 +12,7 @@
       </div>
     <% end %>
 
-    <h1 class="text-5xl text-gray-100 font-bold mt-16"><%= @category.title %></h1>
+    <h1 class="text-5xl text-gray-700 font-bold mt-16"><%= @category.title %></h1>
     <em class="text-2xl font-light mb-10"> <%= truncate(strip_tags(@category.description.to_s), length: 60) %>
 </em>
 
@@ -50,7 +48,7 @@
 
         <div class="flex justify-around items-center col-span-1 border border-r-0">
           <%= link_to image_tag("png/edit.png", class:"w-7"), edit_category_task_path(@category, task) %>
-          <%= link_to image_tag("png/delete.png", class:"w-7"), category_task_path(@category, task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
+          <%= link_to image_tag("png/delete (1).png", class:"w-7"), category_task_path(@category, task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
         </div>
       <% end %>
     </div>
