--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,3 @@
-<br>
-
 <% if @categories.count == 0 %>
 
   <div class="flex justify-center">
@@ -13,7 +11,7 @@
 
 <% else %>
 
-  <div class="flex justify-center">
+  <div class="flex justify-center mt-8">
     <div class="grid grid-flow-row grid-cols-3 grid-rows-3 gap-20 max-w-6xl">
       <% @categories.each do |category| %>
         <div class="w-80 h-44 m-auto flex-col space-y-3 p-6 rounded-lg bg-gradient-to-bl from-white via-blue-50 to-blue-50 eli-form-box-shadow">
