--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="mb-8">
+<nav class="">
   <% if user_signed_in? %>
 
     <div class="flex justify-between max-w-6xl mx-auto py-2 px-2 items-center border-b border-opacity-40 border-black">
@@ -7,7 +7,7 @@
         <%= link_to 'agenda', home_path %>
       </div>
 
-      <div class="flex justify-around w-4/10 text-lg font-bold border">
+      <div class="flex justify-around w-4/10 text-lg font-bold">
 
         <div class="flex items-center rounded-lg hover:bg-gray-600 hover:text-white px-2 transition delay-100 duration-200 ease-in text-gray-600">
           <%# <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
