--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -8,12 +8,12 @@
           Edit Agenda
         </div>
         
-        <div class="flex flex-col space-y-3 mt-5 text-black">
-          <%= f.text_field :title, placeholder: "Agenda Title", class: "w-full placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md py-2 outline-none", style:"background: rgba(250,250,250,.8)" %>
-          <%= f.text_area :description, size: "40x7", placeholder: " Agenda Description", class: "placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none resize-none", style:"background: rgba(250,250,250,.8)" %>
+        <div class="flex flex-col space-y-3 mt-8 text-black">
+          <%= f.text_field :title, placeholder: "Agenda Title", class: "w-full placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3", style:"background: rgba(250,250,250,.8)" %>
+          <%= f.text_area :description, size: "40x7", placeholder: " Agenda Description", class: "placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3 resize-none", style:"background: rgba(250,250,250,.8)" %>
         </div>
 
-        <%= f.submit 'Edit Agenda', class:"flex justify-end bg-blue-50 px-3 py-2 rounded-md hover:bg-blue-400 cursor-pointer text-black mt-4" %>
+        <%= f.submit 'Edit Agenda', class:"flex justify-end bg-blue-500 px-3 py-2 rounded-md hover:bg-blue-600 cursor-pointer text-white mt-4" %>
       
       <% end %>
     </div>
