--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,24 +1,28 @@
-<div class="flex justify-evenly">
-
-  <div class="pl-10 mt-8">
-    <div class="max-w-3xl text-center mt-8 p-5 rounded bg-gradient-to-b from-blue-300 to-transparent eli-form-box-shadow">  
-      <%= form_with scope: :category, url: @category, method: :put, local: true do |f| %>
-
-        <div class="font-bold text-gray-800 text-4xl">
-          Edit Agenda
-        </div>
+<div class="h-screen">
+  <%= render "shared/flash_messages" %>
+  
+  <div class="flex justify-evenly">
+  
+    <div class="pl-10 mt-8">
+      <div class="max-w-3xl text-center mt-8 p-5 rounded bg-gradient-to-b from-blue-300 to-transparent eli-form-box-shadow">  
+        <%= form_with scope: :category, url: @category, method: :put, local: true do |f| %>
+  
+          <div class="font-bold text-gray-800 text-4xl">
+            Edit Agenda
+          </div>
+          
+          <div class="flex flex-col space-y-3 mt-8 text-black">
+            <%= f.text_field :title, placeholder: "Agenda Title", class: "w-full placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3", style:"background: rgba(250,250,250,.8)" %>
+            <%= f.text_area :description, size: "40x7", placeholder: " Agenda Description", class: "placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3 resize-none", style:"background: rgba(250,250,250,.8)" %>
+          </div>
+  
+          <%= f.submit 'Edit Agenda', class:"flex justify-end bg-blue-500 px-3 py-2 rounded-md hover:bg-blue-600 cursor-pointer text-white mt-4" %>
         
-        <div class="flex flex-col space-y-3 mt-8 text-black">
-          <%= f.text_field :title, placeholder: "Agenda Title", class: "w-full placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3", style:"background: rgba(250,250,250,.8)" %>
-          <%= f.text_area :description, size: "40x7", placeholder: " Agenda Description", class: "placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3 resize-none", style:"background: rgba(250,250,250,.8)" %>
-        </div>
-
-        <%= f.submit 'Edit Agenda', class:"flex justify-end bg-blue-500 px-3 py-2 rounded-md hover:bg-blue-600 cursor-pointer text-white mt-4" %>
-      
-      <% end %>
+        <% end %>
+      </div>
     </div>
+  
+    <%= image_tag("checklist-animate.svg", class:"w-1/3") %>
+  
   </div>
-
-  <%= image_tag("checklist-animate.svg", class:"w-1/3") %>
-
 </div>
