--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/flash_messages" %>
 <% if @categories.count == 0 %>
 
   <div class="flex justify-center">
@@ -11,11 +12,45 @@
 
 <% else %>
 
-  <div class="flex justify-center mt-8">
-    <div class="grid grid-flow-row grid-cols-3 grid-rows-3 gap-20 max-w-6xl">
-      <% @categories.each do |category| %>
-        <div class="w-80 h-44 m-auto flex-col space-y-3 p-6 rounded-lg bg-gradient-to-b from-white via-blue-50 to-blue-100 eli-form-box-shadow">
+  <% @categories.each do |category| %>
+    <% category.tasks.each do |task| %>
+      <% if task.deadline == Date.today %>
 
+      <div class="flex justify-center mt-10">
+        <h1 class="text-3xl font-bold underline">URGENT TASKS</h1>
+      </div>
+
+      <div class="flex justify-center mt-5">
+        <div class="flex flex-wrap gap-14 max-w-6xl">
+
+          <div class="w-84 h-48 m-auto flex-col space-y-3 p-6 rounded-lg bg-gradient-to-b from-white via-blue-50 to-blue-100 eli-form-box-shadow">
+            <div class="flex justify-center text-2xl font-bold border-b-2 border-black"><%= task.title %></div>
+            <div class="text-md"><%= category.description.to_s.truncate(30) %></div>
+            <div>
+              <div class="flex justify-end space-x-5 mt-10">
+                <%= link_to image_tag("png/open-folder-with-document.png"), category_path(category), class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+            
+      <%end%>
+    <%end%>
+  <%end%>
+
+
+  <div class="flex justify-center mt-10">
+    <h1 class="text-3xl font-bold underline">Agenda</h1>
+  </div>
+
+  <div class="flex justify-center mt-5">
+    <div class="flex flex-wrap gap-14 max-w-6xl">
+
+      <% @categories.each do |category| %>
+
+        <div class="w-84 h-48 m-auto flex-col space-y-3 p-6 rounded-lg bg-gradient-to-b from-white via-blue-50 to-blue-100 eli-form-box-shadow">
           <div class="flex justify-center text-2xl font-bold border-b-2 border-black"><%= category.title %></div>
           <div class="text-md"><%= category.description.to_s.truncate(30) %></div>
           <div>
@@ -25,10 +60,14 @@
               <%= link_to image_tag("png/delete (1).png"), category_path(category), method: :delete, data: { confirm: "Are you sure you want to delete this agenda?" }, class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
             </div>
           </div>
-
         </div>
-      <% end %>
+
+      <%end%>
+
     </div>
   </div>
 
+
 <% end %>
+
+
