--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,70 +1,73 @@
-<div class="max-w-3xl mx-auto mt-12 p-2 rounded-md relative eli-form-box-shadow">
-
-  <div class="mb-6 flex flex-col items-center">
+<div class="h-screen">
+  <%= render "shared/flash_messages" %>
   
-    <%= link_to new_category_task_path(@category) do %>
+  <div class="max-w-3xl mx-auto mt-12 p-2 rounded-md relative eli-form-box-shadow">
 
-      <div class="absolute top-6 right-5 bg-blue-300 text-gray-900 hover:bg-blue-400 hover:text-white font-medium py-2 px-3 rounded">
+    <div class="mb-6 flex flex-col items-center">
+    
+      <%= link_to new_category_task_path(@category) do %>
 
-          <div class="flex justify-between items-center">
-            <%= image_tag("png/plus.png", class:"w-3 h-3 ")%>
-            <p class="pl-2">Add Task</p>
-          </div>
+        <div class="absolute top-6 right-5 bg-blue-300 text-gray-900 hover:bg-blue-400 hover:text-white font-medium py-2 px-3 rounded">
 
+            <div class="flex justify-between items-center">
+              <%= image_tag("png/plus.png", class:"w-3 h-3 ")%>
+              <p class="pl-2">Add Task</p>
+            </div>
+
+        </div>
+
+      <% end %>
+
+      <h1 class="text-3xl text-gray-800 font-bold mt-5"><%= @category.title %></h1>
+      <em class="text-xl font-light mb-10"> <%= truncate(strip_tags(@category.description.to_s), length: 60) %></em>
+
+    </div>
+
+    <% if @category.tasks.count == 0 %>
+
+      <div class="flex justify-center mt-1">
+        <h1>NO TASK YET UNDER THIS AGENDA!</h1>
       </div>
+
+    <% else %>
+
+      <div class="flex items-center justify-center flex flex-col">
+        <% @category.tasks.each do |task| %>
+          <div class="w-11/12 border mb-2 px-4 py-1", style="background: rgba(255,255,255,0.6)">
+          
+            <div class="flex w-full justify-between items-center">
+
+              <div class="flex flex-col">
+
+                <div class="text-lg font-bold">
+                  <%= task.title %>
+                </div>
+                <em>
+                  <%= task.description %>
+                </em>
+
+              </div>
+
+              <div class="flex justify-between w-4/12">
+                <div>
+                  <%= task.deadline %>
+                </div>
+
+                <div class="flex justify-between items-center w-4/12">
+                  <%= link_to image_tag("png/edit (1).png", class:"w-6"), edit_category_task_path(@category, task) %>
+                  <%= link_to image_tag("png/delete (1).png", class:"w-6"), category_task_path(@category, task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+        <% end %>
+      </div>
+
 
     <% end %>
 
-    <h1 class="text-3xl text-gray-800 font-bold mt-5"><%= @category.title %></h1>
-    <em class="text-xl font-light mb-10"> <%= truncate(strip_tags(@category.description.to_s), length: 60) %></em>
-
   </div>
-
-  <% if @category.tasks.count == 0 %>
-
-    <div class="flex justify-center mt-1">
-      <h1>NO TASK YET UNDER THIS AGENDA!</h1>
-    </div>
-
-  <% else %>
-
-    <div class="flex items-center justify-center flex flex-col">
-      <% @category.tasks.each do |task| %>
-        <div class="w-11/12 border mb-2 px-4 py-1", style="background: rgba(255,255,255,0.6)">
-        
-          <div class="flex w-full justify-between items-center">
-
-            <div class="flex flex-col">
-              <div class="text-lg font-bold">
-                <%= check_box_tag(:done, value = false, checked = false) %>
-                <%= task.title %>
-              </div>
-
-              <em>
-                <%= task.description %>
-              </em>
-            </div>
-
-            <div class="flex justify-between w-4/12">
-              <div>
-                <%= task.deadline %>
-              </div>
-
-              <div class="flex justify-between items-center w-4/12">
-                <%= link_to image_tag("png/edit (1).png", class:"w-6"), edit_category_task_path(@category, task) %>
-                <%= link_to image_tag("png/delete (1).png", class:"w-6"), category_task_path(@category, task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
-              </div>
-            </div>
-
-          </div>
-
-
-        </div>
-      <% end %>
-    </div>
-
-
-  <% end %>
-
 </div>
 
