--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |type, msg| %>
-  <div class="flex justify-center type text-xl fixed top-16 w-full z-10">
+  <div class="flex justify-center type text-xl absolute top-16 w-full z-10">
 
     <%if type == "alert"%>
       <div class="bg-red-200 px-4 py-1 rounded">
