--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,25 +1,29 @@
-<div class="flex justify-evenly">
+<div class="h-screen">
+  <%= render "shared/flash_messages" %>
 
-  <%= image_tag("checklist-animate (1).svg", class:"w-1/3") %>
-
-    <div class="pr-10">
-      <div class="max-w-3xl text-center mt-8 p-5 rounded bg-gradient-to-b from-blue-300 to-transparent eli-form-box-shadow">  
-        <%= form_with scope: :task, model: [@category, @task], local: true do |f| %>
-
-          <div class="font-bold text-gray-800 text-4xl">
-            New Task
-          </div>
+  <div class="flex justify-evenly">
+  
+    <%= image_tag("checklist-animate (1).svg", class:"w-1/3") %>
+  
+      <div class="pr-10">
+        <div class="max-w-3xl text-center mt-8 p-5 rounded bg-gradient-to-b from-blue-300 to-transparent eli-form-box-shadow">  
+          <%= form_with scope: :task, model: [@category, @task], local: true do |f| %>
+  
+            <div class="font-bold text-gray-800 text-4xl">
+              New Task
+            </div>
+            
+            <div class="flex flex-col space-y-3 mt-5 text-black">
+              <%= f.text_field :title, placeholder: " Task Title", class: "w-full placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3", style:"background: rgba(250,250,250,.8)" %>
+              <%= f.text_area :description, size: "40x7", placeholder: " Task Description", class: "placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3 resize-none", style:"background: rgba(250,250,250,.8)" %>
+              <%= f.date_field :deadline, class: "rounded p-2", style:"background: rgba(250,250,250,.8)" %>
+            </div>
+  
+            <%= f.submit 'Create Task', class:"flex justify-end bg-blue-500 px-3 py-2 text-white rounded-md hover:bg-blue-600 cursor-pointer hover:text-white mt-4" %>
           
-          <div class="flex flex-col space-y-3 mt-5 text-black">
-            <%= f.text_field :title, placeholder: " Task Title", class: "w-full placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3", style:"background: rgba(250,250,250,.8)" %>
-            <%= f.text_area :description, size: "40x7", placeholder: " Task Description", class: "placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3 resize-none", style:"background: rgba(250,250,250,.8)" %>
-            <%= f.date_field :deadline, class: "rounded p-2", style:"background: rgba(250,250,250,.8)" %>
-          </div>
-
-          <%= f.submit 'Create Task', class:"flex justify-end bg-blue-500 px-3 py-2 text-white rounded-md hover:bg-blue-600 cursor-pointer hover:text-white mt-4" %>
-        
-        <% end %>
+          <% end %>
+        </div>
       </div>
-    </div>
-
+  
+  </div>
 </div>
