edit the template of user forms

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -48,16 +48,16 @@
         <%= link_to 'agenda', home_path %>
       </div>
 
-      <div class="flex justify-around w-3/12 text-lg font-bold">
+      <div class="flex justify-around w-2/12 text-lg font-bold">
 
-        <div class="flex items-center rounded-lg hover:bg-gray-600 hover:text-white px-2 transition delay-100 duration-200 ease-in text-gray-600">
+        <div class="flex items-center rounded-lg bg-blue-400 rounded hover:bg-blue-500 hover:text-white px-2 transition delay-100 duration-200 ease-in">
           <%# <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
           </svg> %>
           <%= link_to 'Sign up', new_user_registration_path, class:"px-2 py-2" %>
         </div>
 
-        <div class="flex items-center rounded-lg hover:bg-gray-600 hover:text-white px-2 transition delay-100 duration-200 ease-in text-gray-600">
+        <div class="flex items-center rounded-lg rounded hover:bg-blue-500 hover:text-white px-2 transition delay-100 duration-200 ease-in">
           <%# <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
           </svg> %>
