--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,34 @@
-<h2>Sign up</h2>
+<div class="h-screen">
+  <div class="flex justify-center items-center m-auto">
+    <div class="px-10 py-5 pb-16 my-10 eli-form-box-shadow">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <h2 class="text-center text-3xl mb-5 pt-5">Sign up</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+          <div class="flex flex-col space-y-3">
+            <div class="field">
+              <%= f.label :email %><br />
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", size:30, placeholder:"email", class:"p-2 outline-none", style:"background: rgba(250,250,250,.8)" %>
+            </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+            <div class="field">
+              <%= f.label :password %>
+              <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+              <%= f.password_field :password, autocomplete: "new-password", size:30, placeholder:"password", class:"p-2 outline-none", style:"background: rgba(250,250,250,.8)" %>
+            </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+            <div class="field">
+              <%= f.label :password_confirmation %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", size:30, placeholder:"confirm password", class:"p-2 outline-none", style:"background: rgba(250,250,250,.8)" %>
+            </div>
 
-<%= render "devise/shared/links" %>
+            <div class="actions pt-5">
+              <%= f.submit "Sign up", class:"p-2 cursor-pointer" %>
+            </div>
+          </div>
+      <% end %>
+
