--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="bg-gradient-to-tr from-blue-300 via-indigo-200 to-pink-100 font-montserrat text-gray-700 tracking-tighter">
+  <body class="font-montserrat text-gray-700 tracking-tighter">
     <%= render "shared/nav" %>
       <%= yield %>
   </body>
