--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,34 +3,34 @@
 
     <div class="flex justify-between max-w-6xl mx-auto py-2 px-2 items-center border-b border-opacity-40 border-black">
     
-      <div class="text-gray-700 font-extrabold text-4xl hover:text-transparent bg-clip-text bg-gradient-to-br from-pink-400 to-black font-poppins">
+      <div class="font-extrabold text-4xl hover:text-transparent bg-clip-text bg-gradient-to-br from-pink-400 to-black font-poppins">
         <%= link_to 'agenda', home_path %>
       </div>
 
       <div class="flex justify-around w-4/10 text-lg font-bold">
 
-        <div class="flex items-center rounded-lg hover:bg-gray-600 hover:text-white px-2 transition delay-100 duration-200 ease-in text-gray-600">
+        <div class="flex items-center rounded-lg px-2 transition delay-100 duration-200 ease-in hover:bg-gray-700">
           <%# <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
           </svg> %>
           <%= link_to 'Home', home_path, class:"px-2 py-2" %>
         </div>
 
-        <div class="flex items-center rounded-lg hover:bg-gray-600 hover:text-white px-2 transition delay-100 duration-200 ease-in text-gray-600">
+        <div class="flex items-center rounded-lg px-2 transition delay-100 duration-200 ease-in hover:bg-gray-700">
           <%# <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
           </svg> %>
           <%= link_to 'Add Agenda', new_category_path, class:"px-2 py-2" %>
         </div>
 
-        <div class="flex items-center rounded-lg hover:bg-gray-600 hover:text-white px-2 transition delay-100 duration-200 ease-in text-gray-600">
+        <div class="flex items-center rounded-lg px-2 transition delay-100 duration-200 ease-in hover:bg-gray-700">
           <%# <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
           </svg> %>
           <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class:"px-2 py-2" %>
         </div>
 
-        <div class="flex items-center rounded-lg hover:bg-gray-600 hover:text-white px-2 transition delay-100 duration-200 ease-in text-gray-600">
+        <div class="flex items-center rounded-lg px-2 transition delay-100 duration-200 ease-in hover:bg-gray-700">
           <%# <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
           </svg> %>
@@ -44,32 +44,27 @@
 
     <div class="flex justify-between max-w-6xl mx-auto py-2 px-2 items-center border-b border-opacity-40 border-black">
     
-      <div class="text-gray-700 font-extrabold text-4xl hover:text-transparent bg-clip-text bg-gradient-to-br from-pink-500 to-black font-poppins">
+      <div class="font-extrabold text-4xl hover:text-transparent bg-clip-text bg-gradient-to-br from-pink-500 to-black font-poppins">
         <%= link_to 'agenda', home_path %>
       </div>
 
       <div class="flex justify-around w-2/12 text-lg font-bold">
 
-        <div class="flex items-center rounded-lg bg-blue-400 rounded hover:bg-blue-500 hover:text-white px-2 transition delay-100 duration-200 ease-in">
-          <%# <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
-          </svg> %>
-          <%= link_to 'Sign up', new_user_registration_path, class:"px-2 py-2" %>
-        </div>
-
-        <div class="flex items-center rounded-lg rounded hover:bg-blue-500 hover:text-white px-2 transition delay-100 duration-200 ease-in">
+        <div class="flex items-center hover:underline transition delay-100 duration-200 ease-in">
           <%# <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
           </svg> %>
           <%= link_to 'Sign in', new_user_session_path, class:"px-2 py-2" %>
         </div>
 
+        <div class="flex items-center rounded-md eli-gradient-2 px-2 transition delay-100 duration-200 ease-in">
+          <%# <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+          </svg> %>
+          <%= link_to 'Sign up', new_user_registration_path, class:"px-2 py-2" %>
+        </div>
 
       </div>
-    </div>
-
-    <div>
-      <%= render "shared/flash_messages" %>
     </div>
   
   <% end %>
