--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -6,19 +6,19 @@
     <%= image_tag("checklist-animate (1).svg", class:"w-1/3") %>
 
     <div class="pr-10 mt-8">
-      <div class="max-w-3xl text-center mt-8 p-5 rounded bg-gradient-to-b from-blue-300 to-transparent eli-form-box-shadow">  
+      <div class="max-w-3xl text-center mt-8 p-5 rounded eli-gradient eli-form-box-shadow">  
         <%= form_with scope: :category, model: @category, local: true do |f| %>
 
-          <div class="font-bold text-4xl">
+          <div class="font-bold text-4xl eli-color">
             New Agenda
           </div>
           
           <div class="flex flex-col space-y-3 mt-8 text-black">
-            <%= f.text_field :title, placeholder: "Agenda Title", class: "w-full placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3", style:"background: rgba(250,250,250,.8)" %>
-            <%= f.text_area :description, size: "40x7", placeholder: "Agenda Description", class: "placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none p-3 resize-none", style:"background: rgba(250,250,250,.8)" %>
+            <%= f.text_field :title, placeholder: "Agenda Title", class: "w-full placeholder-gray-700 focus:placeholder-gray-400 rounded outline-none p-3 eli-input-box" %>
+            <%= f.text_area :description, size: "40x7", placeholder: "Agenda Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded outline-none p-3 resize-none eli-input-box" %>
           </div>
 
-          <%= f.submit 'Create Agenda', class:"flex justify-end bg-blue-500 px-3 py-2 rounded-md hover:bg-blue-600 cursor-pointer text-white mt-4" %>
+          <%= f.submit 'Create Agenda', class:"flex justify-end px-4 py-2 rounded-md cursor-pointer text-white mt-4 eli-gradient-2" %>
         
         <% end %>
       </div>
