--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,24 +1,24 @@
 <div class="h-screen">
   <%= render "shared/flash_messages" %>
   
-  <div class="max-w-3xl mx-auto mt-12 p-2 rounded-md relative eli-form-box-shadow">
+  <div class="max-w-3xl mx-auto mt-12 p-2 rounded relative eli-gradient-3 eli-form-box-shadow">
 
     <div class="mb-6 flex flex-col items-center">
     
       <%= link_to new_category_task_path(@category) do %>
 
-        <div class="absolute top-6 right-5 bg-blue-300 text-gray-900 hover:bg-blue-400 hover:text-white font-medium py-2 px-3 rounded">
+        <div class="absolute top-6 right-5 font-medium py-2 px-3 rounded eli-gradient-2 eli-color">
 
-            <div class="flex justify-between items-center">
+            <div class="flex justify-between items-center px-2">
               <%= image_tag("png/plus.png", class:"w-3 h-3 ")%>
-              <p class="pl-2">Add Task</p>
+              <p class=" text-lg pl-2">Add Task</p>
             </div>
 
         </div>
 
       <% end %>
 
-      <h1 class="text-3xl text-gray-800 font-bold mt-5"><%= @category.title %></h1>
+      <h1 class="text-4xl font-bold mt-5 eli-color"><%= @category.title %></h1>
       <em class="text-xl font-light mb-10"> <%= truncate(strip_tags(@category.description.to_s), length: 60) %></em>
 
     </div>
