--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <div class="h-screen">
   <div class="flex justify-center items-center m-auto">
-    <div class="px-10 py-5 pb-16 my-10 eli-form-box-shadow">
+    <div class="px-10 py-5 pb-14 my-10 rounded eli-gradient eli-form-box-shadow">
 
-      <h2 class="text-center text-3xl mb-5 pt-5">Sign up</h2>
+      <h2 class="text-center text-3xl mb-5 pt-4 eli-color">Sign up</h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
@@ -10,7 +10,7 @@
           <div class="flex flex-col space-y-3">
             <div class="field">
               <%= f.label :email %><br />
-              <%= f.email_field :email, autofocus: true, autocomplete: "email", size:30, placeholder:"email", class:"p-2 outline-none", style:"background: rgba(250,250,250,.8)" %>
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", size:30, placeholder:"email", class:"p-2 rounded outline-none eli-input-box" %>
             </div>
 
             <div class="field">
@@ -18,16 +18,16 @@
               <% if @minimum_password_length %>
               <em>(<%= @minimum_password_length %> characters minimum)</em>
               <% end %><br />
-              <%= f.password_field :password, autocomplete: "new-password", size:30, placeholder:"password", class:"p-2 outline-none", style:"background: rgba(250,250,250,.8)" %>
+              <%= f.password_field :password, autocomplete: "new-password", size:30, placeholder:"password", class:"p-2 rounded outline-none eli-input-box" %>
             </div>
 
             <div class="field">
               <%= f.label :password_confirmation %><br />
-              <%= f.password_field :password_confirmation, autocomplete: "new-password", size:30, placeholder:"confirm password", class:"p-2 outline-none", style:"background: rgba(250,250,250,.8)" %>
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", size:30, placeholder:"confirm password", class:"p-2 rounded outline-none eli-input-box" %>
             </div>
 
-            <div class="actions pt-5">
-              <%= f.submit "Sign up", class:"p-2 cursor-pointer" %>
+            <div class="actions pt-2">
+              <%= f.submit "Sign up", class:"py-2 px-4 cursor-pointer rounded eli-gradient-2 eli-color" %>
             </div>
           </div>
       <% end %>
