--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -20,7 +20,7 @@
       <section class="h-5/6">
         <div class="mb-20">
           <div class="flex justify-center mt-10">
-            <h1 class="text-3xl font-bold underline">Urgent Tasks</h1>
+            <h1 class="text-3xl font-bold underline text-red-600">Urgent Tasks</h1>
           </div>
 
           <div class="flex justify-center mt-5">
@@ -36,11 +36,11 @@
                         <div>
                           <div class="flex justify-between mt-10">
                             <div>
-                              <h1 class="font-bold"><%= task.deadline %></h1>
+                              <h1 class="font-bold"><%= task.deadline.to_s(:long) %></h1>
                             </div>
 
                             <section class="flex">
-                              <%= link_to image_tag("png/open-folder-with-document.png"), category_path(category), class:"w-7 transform duration-100 hover:scale-110 transition ease-in" %>
+                              <%= link_to image_tag("png/dashboard.png"), category_path(category), class:"w-7 transform duration-100 hover:scale-110 transition ease-in" %>
                             </section>
                           </div>
                         </div>
@@ -61,7 +61,7 @@
   <section class="h-screen">
     <div class="mb-20">
       <div class="flex justify-center mt-10">
-        <h1 class="text-3xl font-bold underline">Agenda</h1>
+        <h1 class="text-3xl font-bold underline text-gray-800">Agenda</h1>
       </div>
     
       <div class="flex justify-center mt-5">
@@ -73,8 +73,8 @@
               <div class="flex justify-center text-2xl font-bold border-b-2 border-black"><%= category.title %></div>
               <div class="text-md"><%= category.description.to_s.truncate(30) %></div>
               <div>
-                <div class="flex justify-end space-x-5 mt-10">
-                  <%= link_to image_tag("png/open-folder-with-document.png"), category_path(category), class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
+                <div class="flex justify-end items-center space-x-5 mt-10">
+                  <%= link_to image_tag("png/dashboard.png"), category_path(category), class:"w-5 transform duration-100 hover:scale-110 transition ease-in" %>
                   <%= link_to image_tag("png/edit (1).png"), edit_category_path(category), class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
                   <%= link_to image_tag("png/delete (1).png"), category_path(category), method: :delete, data: { confirm: "Are you sure you want to delete this agenda?" }, class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
                 </div>
