--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -20,7 +20,7 @@
       <section class="h-5/6">
         <div class="mb-20">
           <div class="flex justify-center mt-10">
-            <h1 class="text-3xl font-bold underline text-red-600">Urgent Tasks</h1>
+            <h1 class="text-3xl font-bold underline text-red-200">URGENT TASKS!</h1>
           </div>
 
           <div class="flex justify-center mt-5">
