--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,18 +8,24 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="flex flex-col space-y-5">
-    <div class="field mb-3">
+  <div class="flex flex-col space-y-2">
+    <div class="field">
+      <%= f.label :username %><br />
+      <%= f.text_field :username, autofocus: true, size:30, placeholder:"username", class:"p-2 rounded outline-none eli-input-box" %>
+    </div>
+
+
+    <div class="field">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email", size:30, placeholder:"email", class:"p-2 rounded outline-none eli-input-box" %>
     </div>
-  </div>
+
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field mb-3">
+  <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "new-password", size:30, placeholder:"password", class:"p-2 rounded outline-none eli-input-box" %>
     <% if @minimum_password_length %>
@@ -28,12 +34,12 @@
     <% end %>
   </div>
 
-  <div class="field mb-3">
+  <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password", size:30, placeholder:"confirm password", class:"p-2 rounded outline-none eli-input-box" %>
   </div>
 
-  <div class="field mb-3">
+  <div class="field">
     <%= f.label :current_password %> <i>(confirm changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password", size:30, placeholder:"current password", class:"p-2 rounded outline-none eli-input-box" %>
   </div>
@@ -41,4 +47,5 @@
   <div class="actions">
     <%= f.submit "Update", class:"py-2 px-4 cursor-pointer rounded eli-gradient-2 eli-color" %>
   </div>
+    </div>
 <% end %>
