--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -19,7 +19,7 @@
 
 
         <div class="px-2 right-profile">
-          <a class="eli-menu-button px-2 py-2 cursor-pointer hover:underline " >Profile</a>
+          <a class="eli-menu-button px-2 py-2 cursor-pointer hover:underline " ><%= current_user.username %></a>
 
           <div class="dropdown-menu rounded bg-gray-600 p-2 w-10/12">
             <div class="flex flex-col">
